# flashinfer-bench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FLASHINFER_MOE_FIX.md  README.md  fi_gqa_e2e_example.py  pyproject.toml  run_fib_gpt5_tmux.sh  test.py
.claude/: settings.json
.claude/commands/: architect.md  cancel-architect.md
.claude/skills/: README.md  add-new-model.md  add-reference-tests.md  clone-repos.md  extract-kernel-definitions.md  extract-model-from-hf.md  find-sglang-baseline.md  generate-model-definition.md  workflow.md
.github/workflows/: build-and-upload-pypi.yml  claude-code-review.yml  claude.yml  deploy-leaderboard-vercel.yml  deploy-leaderboard.yml  linting.yaml  unit_test.yaml
agents/: kernelllm_generator.py  kernelllm_server.py  kevin_generator.py  kevin_server.py
benchmark/: benchmark.py  eval_correct.py  eval_speedup.py  generation.py  kernel_loaders.py  ncu.py  test_ncu_mcp.py  utils.py
benchmark/correctness_results/: correctness_evaluation.json
benchmark/kernel_agent_solutions/: 100_HingeLoss_solution.py  10_3D_tensor_matrix_multiplication_solution.py  18_Matmul_with_transposed_both_solution.py  19_ReLU_solution.py  21_Sigmoid_solution.py  23_Softmax_solution.py  25_Swish_solution.py  26_GELU__solution.py  27_SELU__solution.py  28_HardSigmoid_solution.py  2_Standard_matrix_multiplication__solution.py  30_Softsign_solution.py  31_ELU_solution.py  32_HardTanh_solution.py  33_BatchNorm_solution.py  34_InstanceNorm_solution.py  35_GroupNorm__solution.py  36_RMSNorm__solution.py  38_L1Norm__solution.py  3_Batched_matrix_multiplication_solution.py  40_LayerNorm_solution.py  41_Max_Pooling_1D_solution.py  42_Max_Pooling_2D_solution.py  44_Average_Pooling_1D_solution.py  45_Average_Pooling_2D_solution.py  48_Mean_reduction_over_a_dimension_solution.py  49_Max_reduction_over_a_dimension_solution.py  4_Matrix_vector_multiplication__solution.py  52_Argmin_over_a_dimension_solution.py  53_Min_reduction_over_a_dimension_solution.py  54_conv_standard_3D__square_input__square_kernel_solution.py  55_conv_standard_2D__asymmetric_input__square_kernel_solution.py  56_conv_standard_2D__asymmetric_input__asymmetric_kernel_solution.py  58_conv_transposed_3D__asymmetric_input__asymmetric_kernel_solution.py  59_conv_standard_3D__asymmetric_input__square_kernel_solution.py  60_conv_standard_3D__square_input__asymmetric_kernel_solution.py  (+27 more)
benchmark_results/: kernelllm_results.json
dataset/: solutions.json  traces.jsonl
docker/: .dockerignore  Dockerfile  compose.yaml
docs/: _meta.ts  build_docs.sh  conf.py  docs.json  index.md  index.mdx  index.rst  meta.json  model_coverage.md  model_coverage.mdx  pydoc-markdown.yml  styles.css
examples/: .env.example  benchmark_runner.py  example.py  fi_gqa_e2e_example.py  kernel_generator.py  kernel_generator_prompts.py  list_best_solutions.py  win_at_p.py
flashinfer_bench/: __init__.py  __main__.py  apply.py  benchmark.py  benchmark_config.py  cli.py  definition.py  env.py  logging.py  solution.py  trace.py  trace_set.py  tracer.py  tracing_rules.py  utils.py
flashinfer_trace/: README.md  definition.md  solution.md  trace.md
implementation/: README.md  kernelllm_generator.py  kevin_server.py
inspector/: package.json
leaderboard/: run_pipeline.py
loader/: README.md
misc/: run_benchmark.py
schema/: README.md  agent_inspector.md  benchmark_result.md  code.md  dataset.md  definition.md  flashinfer_bench_python_api.md  kernel_signature.md  leaderboard.md  schema.md  solution.md  trace.md  workload_dataset.md  workload_definition.md  workload_implementation.md
scripts/: README.md  collect_gqa_paged_decode_h8_kv1_d128_ps1_direct.py  collect_gqa_paged_decode_h8_kv1_d128_ps64_direct.py  collect_stream.py  collect_workloads.py  collect_workloads_agent.py  fix_flashinfer_moe_solution.py  gen_baseline_solutions.py  linting.sh  onboard_definition_agent.py  postprocess_plan_dumps.py  release_new_version.sh  rewrite_gqa_references.py  sanitize_dumps.py  sanitize_fi_log.py
tests/: conftest.py  test_gqa_paged_gqa_paged_decode_h24_kv4_d128_ps1.py  test_kernel_generator_parser.py  test_logging.py
tools/: README.md  architect  architect-setup-loop.sh  architect-stop-hook.sh  gpu-lock
web/: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
(+3759 files in other folders)
