[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashinfer-bench"
version = "0.1.0"
description = "FlashInfer Bench - A benchmarking framework for GPU kernel implementations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FlashInfer Team", email = "flashinfer@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "safetensors>=0.4.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.5.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
flashinfer-bench = "flashinfer_bench.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashinfer_bench*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true